   (LP: #1045283)
 * Support retracing foreign powerpc reports, thanks Steve Langasek.
 * apport/report.py: Handle the case where the user has been removed from the
   system, but one of its still-running binaries crashes (LP: #1163453).
 * Fix anonymization of user/GECOS fields with regexp control characters like
   '+'. (LP: #985049)

2.9.2 (2013-03-19):
-------------------
Improvements:
 * report.py, add_package_info(): Add "[origin: unknown]" tag to
   Package/Dependencies fields for non-distro package whose origin cannot be
   determined. (LP: #1148116)
 * Adjust kernel_crashdump to the format kdump-tools produces. Thanks Louis
   Bouchard.

Bug fixes:
 * Write core dumps on SIGQUIT if ulimit allows. Thanks Graeme Hewson.
   (LP: #1153662)

2.9.1 (2013-03-07):
-------------------
Improvements:
 * launchpad.py: Add support for filing bugs as private. Document this in
   doc/crashdb-conf.txt. (LP: #1144647)

Bug fixes:
 * test_signal_crashes.py: Fix test_crash_apport() when being run under
   LD_PRELOAD.
 * Fix crash in error() and warning() if there is no sys.stderr. (LP: #1012445)
 * Fix Turkish translation to add missing keyboard accelerator. (LP: #648750)
 * fileutils.py, find_package_desktopfile(): Restrict to autostart and
   application .desktop files. (LP: #1147528)
 * apt/dpkg get_modified_files(): Fix crash when encountering non-ASCII file
   names in an ASCII locale. (LP: #1044014)

2.9 (2013-03-01):
-----------------
Improvements:
 * fileutils.py, shared_libraries(): Return a "name → path" dict instead of
   just a set of names. Thanks Kyle Nitzsche.
 * sandboxutils.py: Support unpackaged executables, i. e. reports which do not
   have "Package" and "Dependencies" fields. For those, get required libraries
   from "ProcMaps". Thanks Kyle Nitzsche.

Bug fixes:
 * Add "com.ubuntu.apport.apport-gtk-root" polkit action for running apport-gtk
   through pkexec to access system crash reports. Thanks Brian Murray.