@@ -72,9 +72,11 @@ fi
 # avoid breaking the UI tests due to obsolete packages
 export APPORT_IGNORE_OBSOLETE_PACKAGES=1
 
-# avoid breaking tests due to translated strings
+# avoid breaking tests due to translated strings or assuming a particular
+# locale
 export LC_MESSAGES=C
-unset LANGUAGE
+export LC_CTYPE=C
+unset LANGUAGE LANG
 
 # do not assume/disturb session bus
 unset DBUS_SESSION_BUS_ADDRESS
