@@ -15,6 +15,8 @@ Bug fixes:
    system, but one of its still-running binaries crashes (LP: #1163453).
  * Fix anonymization of user/GECOS fields with regexp control characters like
    '+'. (LP: #985049)
+ * Run tests under LC_CTYPE=C and unset LANG as well, to discover assumptions
+   about UTF-8 locales. Fix the two failing tests.
 
 2.9.2 (2013-03-19):
 -------------------
